@@ -1,8 +1,8 @@
 group=solexa
 publish2irods_max_errors=10
 single_plex_decode_max_no_calls=6
-illumina2bam_cpu=2
 illumina2bam_memory=4000
-p4_stage1_memory=7000
-p4_stage1_slots=3
+p4_stage1_memory=20000
+p4_stage1_slots=8
+p4_stage1_i2b_thread_count=8
 qc_adapter_cpu=2
