@@ -82,9 +82,9 @@ subtest 'check_save_arguments' => sub {
   is ($d->job_name, 'p4_stage1_analysis_1234_20090709-123456', 'job name');
   is ($d->fs_slots_num, 4, '4 sf slots');
   is ($d->num_hosts, 1, 'one host');
-  is_deeply ($d->num_cpus, [3], 'num cpus as an array');
+  is_deeply ($d->num_cpus, [8], 'num cpus as an array');
   is ($d->log_file_dir, "$bbp/log", 'log dir');
-  is ($d->memory, 7000, 'memory');
+  is ($d->memory, 20000, 'memory');
   is ($d->command_preexec,
       "npg_pipeline_preexec_references --repository $repos_root",
       'preexec command');
@@ -99,14 +99,14 @@ subtest 'check_save_arguments' => sub {
 
   my $intensities_dir = $dir . '/nfs/sf45/IL2/analysis/123456_IL2_1234/Data/Intensities';
   my $expected = {
-          '1' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane1/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_1.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane1/param_files/1234_1_p4s1_pv_in.json -export_param_vals 1234_1_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_1.log run_1234_1.json && qc --check spatial_filter --id_run 1234 --position 1 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_1.bam.filter.stats \'',
-          '2' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane2/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_2.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane2/param_files/1234_2_p4s1_pv_in.json -export_param_vals 1234_2_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_2.log run_1234_2.json && qc --check spatial_filter --id_run 1234 --position 2 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_2.bam.filter.stats \'',
-          '3' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane3/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_3.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane3/param_files/1234_3_p4s1_pv_in.json -export_param_vals 1234_3_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_3.log run_1234_3.json && qc --check spatial_filter --id_run 1234 --position 3 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_3.bam.filter.stats \'',
-          '4' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane4/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_4.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane4/param_files/1234_4_p4s1_pv_in.json -export_param_vals 1234_4_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_4.log run_1234_4.json && qc --check spatial_filter --id_run 1234 --position 4 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_4.bam.filter.stats \'',
-          '5' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane5/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_5.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane5/param_files/1234_5_p4s1_pv_in.json -export_param_vals 1234_5_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_5.log run_1234_5.json && qc --check spatial_filter --id_run 1234 --position 5 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_5.bam.filter.stats \'',
-          '6' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane6/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_6.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane6/param_files/1234_6_p4s1_pv_in.json -export_param_vals 1234_6_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_6.log run_1234_6.json && qc --check spatial_filter --id_run 1234 --position 6 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_6.bam.filter.stats \'',
-          '7' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane7/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_7.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane7/param_files/1234_7_p4s1_pv_in.json -export_param_vals 1234_7_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_7.log run_1234_7.json && qc --check spatial_filter --id_run 1234 --position 7 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_7.bam.filter.stats \'',
-          '8' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane8/log && vtfp.pl   -o run_1234_8.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane8/param_files/1234_8_p4s1_pv_in.json -export_param_vals 1234_8_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 3 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 3 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 3`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_8.log run_1234_8.json && qc --check spatial_filter --id_run 1234 --position 8 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_8.bam.filter.stats \'',
+          '1' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane1/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_1.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane1/param_files/1234_1_p4s1_pv_in.json -export_param_vals 1234_1_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_1.log run_1234_1.json && qc --check spatial_filter --id_run 1234 --position 1 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_1.bam.filter.stats \'',
+          '2' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane2/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_2.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane2/param_files/1234_2_p4s1_pv_in.json -export_param_vals 1234_2_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_2.log run_1234_2.json && qc --check spatial_filter --id_run 1234 --position 2 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_2.bam.filter.stats \'',
+          '3' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane3/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_3.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane3/param_files/1234_3_p4s1_pv_in.json -export_param_vals 1234_3_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_3.log run_1234_3.json && qc --check spatial_filter --id_run 1234 --position 3 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_3.bam.filter.stats \'',
+          '4' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane4/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_4.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane4/param_files/1234_4_p4s1_pv_in.json -export_param_vals 1234_4_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_4.log run_1234_4.json && qc --check spatial_filter --id_run 1234 --position 4 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_4.bam.filter.stats \'',
+          '5' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane5/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_5.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane5/param_files/1234_5_p4s1_pv_in.json -export_param_vals 1234_5_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_5.log run_1234_5.json && qc --check spatial_filter --id_run 1234 --position 5 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_5.bam.filter.stats \'',
+          '6' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane6/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_6.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane6/param_files/1234_6_p4s1_pv_in.json -export_param_vals 1234_6_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_6.log run_1234_6.json && qc --check spatial_filter --id_run 1234 --position 6 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_6.bam.filter.stats \'',
+          '7' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane7/log && vtfp.pl -splice_nodes \'"\'"\'bamadapterfind:-bamcollate:\'"\'"\' -prune_nodes \'"\'"\'fs1p_tee_split:__SPLIT_BAM_OUT__-\'"\'"\' -o run_1234_7.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane7/param_files/1234_7_p4s1_pv_in.json -export_param_vals 1234_7_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_7.log run_1234_7.json && qc --check spatial_filter --id_run 1234 --position 7 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_7.bam.filter.stats \'',
+          '8' => 'bash -c \' cd ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane8/log && vtfp.pl   -o run_1234_8.json -param_vals ' . $intensities_dir . '/BaseCalls/p4_stage1_analysis/lane8/param_files/1234_8_p4s1_pv_in.json -export_param_vals 1234_8_p4s1_pv_out_' . $unique . '.json -keys cfgdatadir -vals $(dirname $(readlink -f $(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -2 --divide 3` -keys s2b_mt_val -vals `npg_pipeline_job_env_to_threads --num_threads 8 --exclude -1 --divide 3` -keys bamsormadup_numthreads -vals `npg_pipeline_job_env_to_threads --num_threads 8 --divide 3` -keys br_numthreads_val -vals `npg_pipeline_job_env_to_threads --num_threads 8`  $(dirname $(dirname $(readlink -f $(which vtfp.pl))))/data/vtlib/bcl2bam_phix_deplex_wtsi_stage1_template.json && viv.pl -s -x -v 3 -o viv_1234_8.log run_1234_8.json && qc --check spatial_filter --id_run 1234 --position 8 --qc_out ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/archive/qc < ' . $intensities_dir . '/Bustard1.3.4_09-07-2009_auto/PB_cal/1234_8.bam.filter.stats \'',
   };
 
   foreach my $d (@{$da}) {
@@ -121,7 +121,7 @@ subtest 'check_save_arguments' => sub {
   $expected = {
      'assign' => [
         {
-	  'i2b_thread_count' => 3,
+	  'i2b_thread_count' => 8,
 	  'bid_implementation' => 'bambi',
 	  'seqchksum_file' => $intensities_dir . '/BaseCalls/1234_1.post_i2b.seqchksum',
 	  'scramble_reference_fasta' => $dir . '/srpipe_references/references/PhiX/default/all/fasta/phix_unsnipped_short_no_N.fa',
