@@ -1,8 +1,9 @@
 LIST OF CHANGES
 ---------------
 
- - added LSF-independent for number of threads
- - remove redundant dependency on illumina2bam jars
+ - increased number of threads for p4 stage1 (newer bambi version required)
+ - added LSF-independent evaluation for number of threads
+ - removed redundant dependency on illumina2bam jars
  - added wr executor
  - new modules to execute submission of definitions to LSF
  - captured dependencies between pipeline steps in a directed acyclic graph
